# pose-obc-retrieval

./: .gitignore  Cargo.toml  README.md  mise.toml
data/pose-obc-packed/: .gitattributes
data/pose-obc-packed/persona_01/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_02/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_03/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_04/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_05/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_06/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_07/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_08/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_09/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
data/pose-obc-packed/persona_10/: glyphs.avif  images.avif  manifest.jsonl  poses.jsonl
src/: cli.rs  image.rs  lib.rs  retrieval.rs  service.rs
src/cli/: args.rs  dataset.rs
src/cli/args/: dataset.rs  tests.rs
src/pose/lite_hrnet/data/: coco.rs  error.rs  transform.rs
src/pose/spinepose/: burn.rs  estimator.rs
src/retrieval/: dataset.rs  error.rs  features.rs  mod.rs  pack.rs
src/service/: assets.rs  http.rs  search.rs  views.rs
tests/: data_training.rs  dataset_pack.rs  retrieval.rs
